service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-app-service
spec:
  type: ClusterIP
  selector:
    app: otus-app
  ports:
  - port: 8000
    targetPort: 8000
