ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-app-ingress
  annotations:
    # Магия рерайта для задания со звездой
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      # 1. Основной путь из задания
      - path: /health(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: otus-app-service
            port:
              number: 8000
      # 2. Путь со звездой (поменяй olga на любое имя, если хочешь)
      - path: /otusapp/olga(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: otus-app-service
            port:
              number: 8000
